# lions-language

./: .gitignore
core/libcompile/: .gitignore  Cargo.toml
core/libcompile/src/: lib.rs
core/libcompile/src/address/: mod.rs  package.rs
core/libcompile/src/bytecode/: mod.rs
core/libcompile/src/bytecode/define_stack/: mod.rs
core/libcompile/src/bytecode/to_be_filled/: function.rs
core/libcompile/src/compile/: address_dispatch.rs  aide.rs  compile_status_dispatch.rs  imports_mapping.rs  mod.rs  module_stack.rs  ref_count.rs  value_buffer.rs
core/libcompile/src/compile/block/: mod.rs
core/libcompile/src/compile/boolean/: mod.rs
core/libcompile/src/compile/colon_colon_access/: mod.rs
core/libcompile/src/compile/constant/: number.rs  string.rs
core/libcompile/src/compile/context/: const_context.rs  load_stack.rs  mod.rs
core/libcompile/src/compile/define/: mod.rs
core/libcompile/src/compile/end/: mod.rs
core/libcompile/src/compile/enumerate/: mod.rs
core/libcompile/src/compile/finder/: mod.rs
core/libcompile/src/compile/format_define/: mod.rs
core/libcompile/src/compile/funccall/: call.rs  mod.rs  param.rs  to_type.rs
core/libcompile/src/compile/function/: method.rs  mod.rs
core/libcompile/src/compile/import/: mod.rs
core/libcompile/src/compile/interface/: mod.rs
core/libcompile/src/compile/operator/: equal_equal.rs  is_opt.rs  less_than.rs  mod.rs  plus.rs  plus_plus.rs  two_point.rs
core/libcompile/src/compile/package/: mod.rs
core/libcompile/src/compile/point_access/: mod.rs
core/libcompile/src/compile/process_finder/: mod.rs
core/libcompile/src/compile/process_first/: mod.rs
core/libcompile/src/compile/process_if/: mod.rs
core/libcompile/src/compile/process_impl/: mod.rs
core/libcompile/src/compile/process_loop/: mod.rs
core/libcompile/src/compile/process_module/: mod.rs
core/libcompile/src/compile/process_return/: mod.rs
core/libcompile/src/compile/process_use/: mod.rs
core/libcompile/src/compile/process_var/: mod.rs
core/libcompile/src/compile/process_while/: mod.rs
core/libcompile/src/compile/relmod/: mod.rs
core/libcompile/src/compile/scope/: context.rs  mod.rs  vars.rs
core/libcompile/src/compile/static_dispatch/: mod.rs
core/libcompile/src/compile/structinit/: mod.rs
core/libcompile/src/compile/variant/: load.rs
core/libcompile/src/define/: mod.rs
core/libcompile/src/define_dispatch/: block.rs  function.rs  mod.rs
core/libcompile/src/define_stream/: memory.rs  mod.rs
core/libcompile/src/module/: mod.rs  undefine_function.rs
core/libcompile/src/optcode/: mod.rs
core/libcompile/src/package/: mod.rs
core/libcompile/src/static_dispatch/: mod.rs  variant.rs
core/libcompile/src/static_stream/: mod.rs
core/libcompile/src/status/: mod.rs
core/libfunction/: Cargo.toml
core/libfunction/src/: lib.rs
core/libfunction/src/compile_unit/: hashmap.rs  mod.rs
core/libfunction/src/control/: mod.rs  notype.rs  structure.rs
core/libinterfacetype/: Cargo.toml
core/libinterfacetype/src/interface/: mod.rs
core/libmacro/: Cargo.toml
core/libmacro/src/: lib.rs
core/libmacro/src/field/: get.rs  get_move.rs  mod.rs  new.rs
core/libpackage/: Cargo.toml
core/libpackage/src/: lib.rs
core/libpackage/src/config/: mod.rs
core/libpackage/src/control/: mod.rs
core/libtype/: Cargo.toml
core/libtype/src/: lib.rs
core/libtype/src/enumerate/: mod.rs
core/libtype/src/function/: consts.rs  format.rs  function_statement.rs  mod.rs  splice.rs
core/libtype/src/instruction/: mod.rs
core/libtype/src/interface/: mod.rs
core/libtype/src/module/: mod.rs  module.rs
core/libtype/src/package/: mod.rs
core/libtype/src/primeval/: mod.rs  primeval_type.rs
core/libtype/src/structure/: data.rs  define.rs  field.rs  member.rs  mod.rs
core/libtype/src/typ/: consts.rs  mod.rs
core/libvm/: .gitignore  Cargo.toml
core/libvm/src/: lib.rs
core/libvm/src/data/: mod.rs
core/libvm/src/memory/: mod.rs
core/libvm/src/vm/: addr_mapping.rs  mod.rs
core/libvm/tests/: main.lions.bak
lionsc/: Cargo.toml
lionsc/src/: main.rs
lionsc/src/command/: mod.rs  package_parse.rs
lionsc/src/compile/: compile_lib.rs  mod.rs
lionsvm/: Cargo.toml
(+252 files in other folders)
