[package]
name = "lionsc"
version = "0.1.0"
authors = ["MwlLj <lions_language@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libcommon = { path = "../core/libcommon" }
libpackage = { path =  "../core/libpackage" }
command_option = { git = "https://github.com/lions-language/command-option", version = "*" }
