[package]
name = "libcompile"
version = "0.1.0"
authors = ["lions-language <lions_language@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libgrammar = { path = "../libgrammar" }
libhosttype = { path = "../libhosttype" }
libcommon = { path = "../libcommon" }
libtype = { path = "../libtype" }
libtypecontrol = { path = "../libtypecontrol" }
libstructtype = { path = "../libstructtype" }
libresult = { path = "../libresult" }
libmacro = { path = "../libmacro" }
pathdiff = { version = "0.2.0" }
