[package]
name = "libmacro"
version = "0.1.0"
authors = ["lions-language <lions_language@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.34" }
quote = { version = "1.0.7" }
