[package]
name = "libtype"
version = "0.1.0"
authors = ["lions-language <lions_language@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libcommon = { path = "../libcommon" }
phf = { version = "0.7.24", features = ["macros"] }
libmacro = { path = "../libmacro" }
libresult = { path = "../libresult" }
