[package]
name = "libvm"
version = "0.1.0"
authors = ["lions-language <lions_language@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libcompile = { path = "../libcompile" }
liblink = { path = "../liblink" }
libgrammar = { path = "../libgrammar" }
libtype = { path = "../libtype" }
libcommon = { path = "../libcommon" }
libmacro = { path = "../libmacro" }
libtypecontrol = { path = "../libtypecontrol" }
libstructtype = { path = "../libstructtype" }
libpackage = { path = "../libpackage" }
